pdk/1.9/modules/ROOT/pages/policies-pdk-policy-templates.adoc
= Custom Policy Examples
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

Omni Gateway Policy Development Kit (PDK) provides example policy projects to help you start configuring your Rust source code.

You can find all example policies and their documentation in the https://github.com/mulesoft/pdk-custom-policy-examples[PDK Custom Policy GitHub Repository].

== API Policy Examples

PDK includes the following API example policies:

* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/block/README.md[Block Policy Example]: Use the Block Policy as an example of how to block IP ranges by implementing xref:policies-pdk-configure-features-timer.adoc[periodic functions] and xref:policies-pdk-configure-features-http-request.adoc[HTTP calls].
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/certs/README.md[Certification Policy Example]: Use the Certification Policy as an example of how to obtain data concerning connection certificates.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/cors-validation/README.md[CORS Validation Policy Example]: Use the CORS Validation Policy as an example of how to use functions of the xref:policies-pdk-configure-features-cors.adoc[CORS Library] in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/crypto/README.md[Crypto Policy Example]: Use the Crypto Policy as an example of how to use xref:policies-pdk-configure-features-libraries.adoc[third-party libraries] that provide cryptography capabilities in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/data-caching/README.md[Data Caching Policy Example]: Use the Data Caching Policy as an example of how to implement xref:policies-pdk-configure-features-caching.adoc[data caching] in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/data-storage-stats/README.md[Data Storage Stats Policy Example]: Use the Data Storage Stats Policy as an example of how to implement xref:policies-pdk-configure-features-data-storage.adoc[data storage] with both local (in-memory) and shared (Redis) data storage.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/dataweave/README.md[DataWeave Policy Example]: Use the DataWeave Policy as an example of how to handle xref:policies-pdk-configure-features-dataweave.adoc[custom DataWeave expressions] in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/ip-filter/README.md[IP Filter Policy Example]: Use the IP Filter Policy as an example of how to extract client IPs from request headers and implement IP-based access control using PDK's xref:policies-pdk-configure-features-ip-filter.adoc[IP Filter feature].
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/json-validation/README.md[JSON Validation Policy Example]: Use the JSON Validation Policy as an example of how to enforce JSON payload limits with the xref:policies-pdk-configure-features-json-validator.adoc[JSON Validator library].
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/jwt-generation/README.md[JWT Generation Policy Example]: Use the JWT Generation Policy as an example of how to generate JWT tokens using the xref:policies-pdk-configure-features-jwt.adoc#create-jwt-token[JWT generation function].
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/jwt-validation/README.md[JWT Validation Policy Example]: Use the JWT Validation Policy as an example of how to use functions of the xref:policies-pdk-configure-features-jwt.adoc[JWT Library] in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/metrics/README.md[Metrics Policy Example]: Use the Metrics Policy as an example of how to periodically send data to a metric ingestion service by implementing xref:policies-pdk-configure-features-timer.adoc[periodic functions] and xref:policies-pdk-configure-features-http-request.adoc[HTTP calls].
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/oauth-2-token-introspection/README.md[OAuth 2.0 Token Introspection Policy Example]: Use the OAuth 2.0 Token Introspection Policy as an example of how to use xref:policies-pdk-configure-features-token-introspection.adoc[Token Introspection] in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/query/README.md[Query Policy Example]: Use the Query Policy as an example of how to handle query parameters in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/simple-oauth-2-validation/README.md[Simple OAuth 2.0 Validation Policy Example]: Use the Simple OAuth 2.0 Validation Policy as an example of how to implement xref:policies-pdk-configure-features-http-request.adoc[HTTP calls] in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/spike/README.md[Spike Policy Example]: Use the Spike Policy as an example of how to implement spike arrest with the xref:policies-pdk-configure-features-spike-control.adoc[Spike Control library] and periodic ticking with xref:policies-pdk-configure-features-timer.adoc[Timer functions].
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/stream-payload/README.md[Stream Payload Policy Example]: Use the Stream Payload Policy as an example of how to xref:policies-pdk-configure-features-headers.adoc#streaming-bodies[read payload bodies larger than 1MB].
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/tls-calls/README.md[TLS Calls Policy Example]: Use the TLS Calls Policy as an example of how to make HTTPS calls in your policy without installing certificates on the operating system running Omni Gateway.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/websocket/README.md[WebSocket Policy Example]: Use the WebSocket Policy as an example of how to xref:policies-pdk-configure-features-websocket.adoc[support WebSocket APIs] and process bidirectional frames in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/xml-validation/README.md[XML Validation Policy Example]: Use the XML Validation Policy as an example of how to enforce XML payload limits with the xref:policies-pdk-configure-features-xml-validator.adoc[XML Validator library].

== A2A and MCP Server Policy Examples

PDK includes the following A2A and MCP example policies:

* https://github.com/mulesoft/pdk-custom-policy-examples/blob/main/agent-policies/a2a-pii-detector-policy/README.md[A2A PII Detector Policy Example]: Demonstrates how to log or block sensitive information in A2A agent interactions.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/main/agent-policies/a2a-prompt-decorator-policy/README.md[A2A Prompt Decorator Policy Example]: Shows how to modify prompts sent to an A2A agent.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/main/agent-policies/a2a-support-policy/README.md[A2A Support Policy Example]: Demonstrates how to add A2A support.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/main/agent-policies/mcp-support-policy/README.md[MCP Support Policy Example]: Shows how to add MCP support.

== Set Up an Example Policy Project

To use an example policy project:

. Make sure you have installed all xref:policies-pdk-prerequisites.adoc[PDK prerequisites].
. Clone the https://github.com/mulesoft/pdk-custom-policy-examples[PDK Custom Policy GitHub Repository] using the following command or your preferred GitHub interface:
+
[source,ssh]
----
git clone https://github.com/mulesoft/pdk-custom-policy-examples.git
----

. Navigate to the newly cloned directory, then copy and paste the directory of your desired policy into a new location.
. In the `cargo.toml` file of the copied policy example, replace the `group-id` with your group ID, for example:
+
[source,toml]
----
group_id = "<your-group-id>"
----
. Run the `make setup` command:
+
[source,ssh]
----
make setup
----

. Navigate to the `README.md` file in the example policy to read more about the policy and how to test it.


== See Also

* xref:policies-pdk-configure-features.adoc[]
